--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
-}
+}   
 body{
     height: 100vh;
     width: 100vw;
@@ -1202,7 +1202,7 @@ footer .redes {
     }
 
     .button-section-1 button {
-        width: 127px;
+        width: 95%;
         height: 40px;
         border-radius: 5px;
         margin: 4px 3px;
