--- a/css/style.css
+++ b/css/style.css
@@ -162,8 +162,13 @@ main header {
 }
 
 .div-market {
- display: flex;
- align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+
+.div-market-txt {
+    display: flex;
+    align-items: center;
 }
 
 .text-content .market {
