--- a/css/style.css
+++ b/css/style.css
@@ -1105,6 +1105,10 @@ footer .redes {
         margin: 0 0 50px 0;
     }
 
+    .logo h2{
+        margin: 0 0 10px 0;
+    }
+
     .text-content ul li {
         list-style: none;
         display: flex;
